--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "translator"
   ],
   "author": "Philippe Kalitine",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "dependencies": {
     "bufferutil": "^1.2.1",
     "mute-client": "https://github.com/coast-team/mute-client#netflux",
