--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "netflux",
     "translator"
   ],
-  "author": "Philippe Kalitine",
+  "author": "Matthieu Nicolas",
   "license": "AGPL-3.0",
   "dependencies": {
     "bufferutil": "^1.2.1",
@@ -22,7 +22,7 @@
     "mute-client": "https://github.com/coast-team/mute-client#netflux",
     "mute-structs": "0.0.7",
     "mute-utils": "^0.1.1",
-    "netflux": "^0.10.6",
+    "netflux": "1.0.0-rc.1",
     "request": "^2.75.0",
     "utf-8-validate": "^1.2.1",
     "ws": "^1.1.1",
