Update Netflux to v1.0.0-rc.3

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "conaclos/node-only-mod"
     ],
     "rules": {
-      "no-process-env": 0
+      "no-process-env": 0,
+      "no-console": 0
     }
 }
